# Kuvastin

./: .gitignore  AppIcon.xpm  CMakeLists.txt  Kuvastin.sln  Kuvastin.vcxproj  buildDebug.bat  buildReleaseTest.bat  common.h  frame.cpp  frame.h  main.cpp  main.h
